@@ -24,6 +24,7 @@ Todo:
 - Restructured fileformats.txt.
 - Added Extended Image data block (E) and Project data block (P) to fileformats.txt.
 - Added project and extended image class with saving to and loading from stream.
+- BDPUndoUnit variable names uniformized, added CreateFromStream where missed.
 
 2023.04.11
 - New color cluster system.
